--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
   "name": "i18nexus",
-  "version": "1.0.4",
-  "description": "Complete React i18n toolkit with cookie-based language management, Google Sheets integration, and automatic code transformation tools",
+  "version": "2.0.1",
+  "description": "React i18n toolkit with cookie-based language management and SSR support",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "bin": {
-    "i18n-wrapper": "dist/bin/i18n-wrapper.js",
-    "i18n-sheets": "dist/bin/i18n-sheets.js"
-  },
   "scripts": {
-    "build": "npm run clean && tsc -p tsconfig.build.json && npm run build:bins",
-    "build:bins": "chmod +x dist/bin/*.js",
+    "build": "npm run clean && tsc -p tsconfig.build.json",
     "clean": "rm -rf dist",
     "dev": "tsc -p tsconfig.build.json --watch",
     "test": "jest",
