feat: Add Next.js App Router support with server-side utilities
- Add initialLanguage prop to I18nProvider to prevent hydration mismatch
- Add server-side utilities for reading language from cookies
- Update package.json exports for better Next.js compatibility
- Add comprehensive Next.js App Router usage guide in README

--- a/package.json
+++ b/package.json
@@ -1,9 +1,23 @@
 {
   "name": "i18nexus",
-  "version": "2.0.2",
+  "version": "2.0.5",
   "description": "React i18n toolkit with cookie-based language management and SSR support",
   "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "default": "./dist/index.js"
+    },
+    "./server": {
+      "types": "./dist/utils/server.d.ts",
+      "import": "./dist/utils/server.js",
+      "default": "./dist/utils/server.js"
+    }
+  },
   "scripts": {
     "build": "npm run clean && tsc -p tsconfig.build.json",
     "clean": "rm -rf dist",
@@ -48,10 +62,8 @@
     "LICENSE"
   ],
   "peerDependencies": {
-    "i18next": ">=21.0.0",
     "react": ">=16.8.0",
-    "react-dom": ">=16.8.0",
-    "react-i18next": ">=11.0.0"
+    "react-dom": ">=16.8.0"
   },
   "dependencies": {
     "@babel/generator": "^7.23.0",
