feat: improve extractor to skip long code blocks and update translations

--- a/packages/i18nexus-demo/package.json
+++ b/packages/i18nexus-demo/package.json
@@ -30,7 +30,7 @@
     "@types/react-dom": "^18",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "i18nexus-tools": "file:../i18nexus-cli",
+    "i18nexus-tools": "^1.1.1",
     "null-loader": "^4.0.1",
     "tailwindcss": "^4",
     "typescript": "^5"
