--- a/.gitignore
+++ b/.gitignore
@@ -1,53 +1,37 @@
 # Dependencies
 node_modules/
-.pnp
-.pnp.js
+package-lock.json
 
 # Build outputs
 dist/
-build/
 .next/
 out/
 
-# Testing
-coverage/
-
-# Environment variables
+# Environment
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*.local
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Testing
+coverage/
+.nyc_output/
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
-
-# OS
-.DS_Store
-*.pem
-
-# Debug
-.vscode/
-.idea/
 
 # Misc
-*.swp
-*.swo
-*~
-
-# Lock files (keep package-lock.json but ignore others)
-yarn.lock
-pnpm-lock.yaml
-
-# Credentials
-credentials.json
-google-credentials.json
-*-credentials.json
-
-# Temporary files
-tmp/
-temp/
-*.tmp
+*.tgz
+.cache/
